--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,21 @@
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_700">#FF9800</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#ffffff</color>
+    <color name="orange">#FFFF9800</color>
+    <color name="royalblue">#0000FF</color>
+    <color name="applightblue">#53c0cc</color>
+    <color name="appdarkblue">#1f4f58</color>
+    <color name="appdarkgreen">#213502</color>
+    <color name="applightgreen">#e0ebc3</color>
+    <color name="appyellow">#dcda65</color>
+    <color name="backgroundblue">#caeaed</color>
+    <color name="appbackground">#ffffff</color>
+    <color name="appmainboxes">#dadada</color>
+    <color name="appsmallboxes">#dadada</color>
+    <color name="apptextcolor">#000000</color>
+
+
 </resources>
