--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/appName"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
@@ -26,6 +27,15 @@
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/SettingsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_baseline_more_vert_24"
+                android:layout_toEndOf="@id/appName"
+                android:backgroundTint="@color/appbackground"
+                />
+
             <Spinner
                 android:id="@+id/spinner_tags"
                 android:layout_width="wrap_content"
@@ -33,6 +43,7 @@
                 android:layout_alignParentEnd="true"
                 android:entries="@array/tags"
                 android:gravity="center" />
+
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
