--- a/app/src/main/res/layout/list_instructions_step_items.xml
+++ b/app/src/main/res/layout/list_instructions_step_items.xml
@@ -13,9 +13,9 @@
 
         <ImageView
             android:id="@+id/imageView_instructions_step_items"
-            android:scaleType="center"
+            android:scaleType="fitCenter"
             android:layout_width="100dp"
-            android:layout_height="60dp" />
+            android:layout_height="100dp" />
 
         <TextView
             android:id="@+id/textView_instructions_step_item"
@@ -26,7 +26,7 @@
             android:singleLine="true"
             android:text="Item"
             android:textAlignment="center"
-            android:textColor="@color/apptextcolor"
+            android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="normal"
             android:layout_width="match_parent"
