--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="backgroundblue">#caeaed</color>
     <color name="appbackground">#ffffff</color>
     <color name="appmainboxes">#dadada</color>
-    <color name="appsmallboxes">#dadada</color>
+    <color name="appsmallboxes">#ffffff</color>
     <color name="apptextcolor">#000000</color>
 
 
