--- a/app/src/main/res/layout/list_liked_row.xml
+++ b/app/src/main/res/layout/list_liked_row.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:id="@+id/random_list_container"
+    android:id="@+id/random_list_container2"
     app:cardBackgroundColor="@color/appbackground"
     app:cardElevation="8dp">
 
@@ -16,7 +16,7 @@
 
 
         <TextView
-            android:id="@+id/textView_title"
+            android:id="@+id/textView_title2"
             android:singleLine="true"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <ImageView
-            android:id="@+id/imageView_food"
+            android:id="@+id/imageView_food2"
             android:scaleType="centerCrop"
             android:layout_margin="8dp"
             android:layout_width="match_parent"
@@ -50,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
-                    android:id="@+id/textView_Servings"
+                    android:id="@+id/textView_Servings2"
                     android:textSize="14sp"
                     android:padding="8dp"
                     android:text="2 Persons"
@@ -70,7 +70,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
-                    android:id="@+id/textView_Likes"
+                    android:id="@+id/textView_Likes2"
                     android:textSize="14sp"
                     android:padding="8dp"
                     android:text="2 Persons"
@@ -90,7 +90,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
-                    android:id="@+id/textView_time"
+                    android:id="@+id/textView_time2"
                     android:textSize="14sp"
                     android:padding="8dp"
                     android:text="2 Persons"
@@ -99,22 +99,22 @@
                     android:layout_height="wrap_content"/>
             </LinearLayout>
             <LinearLayout
-                android:id="@+id/likeLinearLayoutButton"
+                android:id="@+id/likeLinearLayoutButton2"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:id="@+id/starImage"
-                    android:src="@drawable/ic_baseline_star_outline_24"
+                    android:id="@+id/startId2"
+                    android:src="@drawable/ic_baseline_star_24"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/AddFavorites"
+                    android:id="@+id/AddFavorites2"
                     android:padding="8dp"
                     android:text="Like"
                     android:textAlignment="center"
