--- a/app/src/main/res/layout/activity_liked.xml
+++ b/app/src/main/res/layout/activity_liked.xml
@@ -19,11 +19,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="@dimen/margin8dp"
                 android:gravity="center"
-                android:text="Liked Recipes"
+                android:text="@string/liked_recipes"
                 android:textColor="@color/apptextcolor"
-                android:textSize="24sp"
+                android:textSize="@dimen/text24sp"
                 android:textStyle="bold" />
 
 
@@ -35,7 +35,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_random2"
-        android:layout_margin="4dp"
+        android:layout_margin="@dimen/margin4dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
