--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,16 +20,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="@dimen/margin8dp"
                 android:gravity="center"
                 android:text="@string/app_name"
                 android:textColor="@color/apptextcolor"
-                android:textSize="24sp"
+                android:textSize="@dimen/textSize24sp"
                 android:textStyle="bold" />
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/SettingsButton"
-                android:layout_width="40dp"
+                android:layout_width="@dimen/margin40dp"
                 android:layout_height="match_parent"
                 android:layout_toEndOf="@id/appName"
                 android:backgroundTint="@color/appbackground"
@@ -37,16 +37,18 @@
 
             <ImageButton
                 android:id="@+id/likedList"
-                android:layout_width="40dp"
+                android:layout_width="@dimen/margin40dp"
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
+                android:contentDescription="@string/liked_list_picture"
                 android:layout_toEndOf="@id/SettingsButton"
                 android:backgroundTint="@color/appbackground"
                 android:src="@drawable/ic_baseline_star_24" />
 
             <ImageButton
                 android:id="@+id/logOut"
-                android:layout_width="40dp"
+                android:layout_width="@dimen/margin40dp"
+                android:contentDescription="@string/log_out_button_picture"
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/likedList"
@@ -65,9 +67,9 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.cardview.widget.CardView
-        app:cardElevation="8dp"
+        app:cardElevation="@dimen/margin8dp"
         android:background="@color/appmainboxes"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/margin8dp"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
         <androidx.appcompat.widget.SearchView
@@ -83,7 +85,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_random"
-        android:layout_margin="4dp"
+        android:layout_margin="@dimen/margin4dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
