--- a/app/src/main/res/layout/list_instructions.xml
+++ b/app/src/main/res/layout/list_instructions.xml
@@ -4,24 +4,24 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/appbackground"
-    app:cardElevation="8dp"
-    android:layout_margin="8dp">
+    app:cardElevation="@dimen/margin8dp"
+    android:layout_margin="@dimen/margin8dp">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/textView_instruction_name"
-            android:text="Instructions"
+            android:text="@string/instructions"
             android:textColor="@color/apptextcolor"
             android:textAlignment="center"
-            android:textSize="18sp"
-            android:padding="8dp"
+            android:textSize="@dimen/testSize18sp"
+            android:padding="@dimen/margin8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_instruction_steps"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
