--- a/app/src/main/res/layout/list_instructions_steps.xml
+++ b/app/src/main/res/layout/list_instructions_steps.xml
@@ -4,8 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/appmainboxes"
-    app:cardElevation="8dp"
-    android:layout_margin="4dp">
+    app:cardElevation="@dimen/margin8dp"
+    android:layout_margin="@dimen/margin4dp">
 <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -16,22 +16,22 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/textView_instructions_step_number"
-            android:text="1"
+            android:text="@string/_1"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="@dimen/testSize18sp"
             android:textAlignment="center"
             android:textColor="@color/apptextcolor"
-            android:padding="8dp"
+            android:padding="@dimen/margin8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/textView_instructions_step_title"
-            android:text="Step Name"
+            android:text="@string/step_name"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="@dimen/testSize18sp"
             android:textAlignment="textStart"
             android:textColor="@color/apptextcolor"
-            android:padding="8dp"
+            android:padding="@dimen/margin8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
@@ -40,17 +40,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Equipments"
+            android:text="@string/equipments"
             android:textColor="@color/apptextcolor"
             android:textAlignment="textStart"
-            android:textSize="18sp"
+            android:textSize="@dimen/testSize18sp"
             android:textStyle="bold"
-            android:padding="8dp"
+            android:padding="@dimen/margin8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_instructions_equipments"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
@@ -59,17 +59,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
-        android:text="Ingredients"
+        android:text="@string/ingredients"
         android:textColor="@color/apptextcolor"
         android:textAlignment="textStart"
-        android:textSize="18sp"
+        android:textSize="@dimen/testSize18sp"
         android:textStyle="bold"
-        android:padding="8dp"
+        android:padding="@dimen/margin8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_instructions_ingredients"
-        android:layout_margin="4dp"
+        android:layout_margin="@dimen/margin4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
