--- a/app/src/main/res/layout/list_liked_row.xml
+++ b/app/src/main/res/layout/list_liked_row.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_margin="@dimen/margin8dp"
     android:id="@+id/random_list_container2"
     app:cardBackgroundColor="@color/appbackground"
-    app:cardElevation="8dp">
+    app:cardElevation="@dimen/margin8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,17 +23,18 @@
             android:scrollHorizontally="true"
             android:textStyle="bold"
             android:textColor="@color/apptextcolor"
-            android:textSize="22sp"
-            android:padding="8dp"
-            android:text="Dish Name"
+            android:textSize="@dimen/textSize22sp"
+            android:padding="@dimen/margin8dp"
+            android:text="@string/dish_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <ImageView
             android:id="@+id/imageView_food2"
             android:scaleType="centerCrop"
-            android:layout_margin="8dp"
+            android:contentDescription="@string/food2"
+            android:layout_margin="@dimen/margin8dp"
             android:layout_width="match_parent"
-            android:layout_height="200dp"/>
+            android:layout_height="@dimen/size200dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -46,14 +47,14 @@
                 android:layout_weight="1">
                 <ImageView
                     android:src="@drawable/ic_servings"
-
+                    android:contentDescription="@string/servings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:id="@+id/textView_Servings2"
-                    android:textSize="14sp"
-                    android:padding="8dp"
-                    android:text="2 Persons"
+                    android:textSize="@dimen/testSize14sp"
+                    android:padding="@dimen/margin8dp"
+                    android:text="@string/_2_persons"
                     android:textColor="@color/apptextcolor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -66,14 +67,14 @@
                 android:layout_weight="1">
                 <ImageView
                     android:src="@drawable/ic_like"
-
+                    android:contentDescription="@string/like"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:id="@+id/textView_Likes2"
-                    android:textSize="14sp"
-                    android:padding="8dp"
-                    android:text="2 Persons"
+                    android:textSize="@dimen/testSize14sp"
+                    android:padding="@dimen/margin8dp"
+                    android:text="@string/_2_persons"
                     android:textColor="@color/apptextcolor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -86,14 +87,14 @@
                 android:layout_weight="1">
                 <ImageView
                     android:src="@drawable/ic_time"
-
+                    android:contentDescription="@string/time_pic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:id="@+id/textView_time2"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/testSize14sp"
                     android:padding="8dp"
-                    android:text="2 Persons"
+                    android:text="@string/_2_persons"
                     android:textColor="@color/apptextcolor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -107,6 +108,7 @@
                 android:layout_height="wrap_content">
                 <ImageView
                     android:id="@+id/startId2"
+                    android:contentDescription="@string/start_picture"
                     android:src="@drawable/ic_baseline_star_24"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -116,7 +118,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/AddFavorites2"
                     android:padding="8dp"
-                    android:text="Like"
+                    android:text="@string/like"
                     android:textAlignment="center"
                     android:textColor="@color/apptextcolor"/>
 
