--- a/app/src/main/res/layout/list_meal_ingredients.xml
+++ b/app/src/main/res/layout/list_meal_ingredients.xml
@@ -4,8 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/appsmallboxes"
-    android:elevation="8dp"
-    android:layout_margin="8dp">
+    android:elevation="@dimen/margin8dp"
+    android:layout_margin="@dimen/margin8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,34 +13,35 @@
         android:orientation="vertical">
         <TextView
             android:id="@+id/textView_ingredients_quantity"
-            android:text="1 pc"
+            android:text="@string/_1_pc"
             android:singleLine="true"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:scrollHorizontally="true"
             android:textColor="@color/black"
             android:textAlignment="center"
-            android:textSize="16sp"
-            android:padding="4dp"
+            android:textSize="@dimen/textSize16sp"
+            android:padding="@dimen/margin4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <ImageView
             android:id="@+id/imageView_ingredients"
+            android:contentDescription="@string/ingredients"
             android:scaleType="fitCenter"
-            android:layout_width="80dp"
-            android:layout_height="50dp"/>
+            android:layout_width="@dimen/size80dp"
+            android:layout_height="@dimen/size50dp"/>
         <TextView
             android:id="@+id/textView_ingredients_name"
-            android:text="Veggies"
+            android:text="@string/veggies"
             android:singleLine="true"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:scrollHorizontally="true"
-            android:textSize="16sp"
+            android:textSize="@dimen/textSize16sp"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:padding="4dp"
+            android:padding="@dimen/margin4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
