--- a/app/src/main/res/layout/spinner_text.xml
+++ b/app/src/main/res/layout/spinner_text.xml
@@ -2,9 +2,9 @@
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:text="Menu"
-    android:textSize="18sp"
+    android:padding="@dimen/margin8dp"
+    android:text="@string/menu"
+    android:textSize="@dimen/testSize18sp"
     android:textColor="@color/apptextcolor">
 
 </CheckedTextView>
